# TestSenior

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
Libraries/: CMakeLists.txt
Libraries/DataGenerator/: CMakeLists.txt
Libraries/DataGenerator/Includes/Module/: DataGeneratorFactory.hpp  IDataGenerator.hpp
Libraries/DataGenerator/Includes/Module/Internal/: DataGenerator.hpp
Libraries/DataGenerator/Sources/Module/: DataGeneratorFactory.cpp
Libraries/DataGenerator/Sources/Module/Internal/: DataGenerator.cpp
Libraries/DataModule/: CMakeLists.txt
Libraries/DataModule/Includes/Module/: IModule.hpp  ModuleFactory.hpp
Libraries/DataModule/Includes/Module/Internal/: DataModule.hpp
Libraries/DataModule/Sources/Module/: ModuleFactory.cpp
Libraries/DataModule/Sources/Module/Internal/: DataModule.cpp
Libraries/DataPrintingEngine/: CMakeLists.txt
Libraries/DataPrintingEngine/Includes/Module/: DataPrintingEngineFactory.hpp  IDataPrintingEngine.hpp
Libraries/DataPrintingEngine/Includes/Module/Internal/: DataPrintingEngine.hpp
Libraries/DataPrintingEngine/Sources/Module/: DataPrintingEngineFactory.cpp
Libraries/DataPrintingEngine/Sources/Module/Internal/: DataPrintingEngine.cpp
Libraries/DataSearchEngine/: CMakeLists.txt
Libraries/DataSearchEngine/Includes/Module/: DataSearchEngineFactory.hpp  IDataSearchEngine.hpp
Libraries/DataSearchEngine/Includes/Module/Internal/: DataSearchEngine.hpp
Libraries/DataSearchEngine/Sources/Module/: DataSearchEngineFactory.cpp
Libraries/DataSearchEngine/Sources/Module/Internal/: DataSearchEngine.cpp
Libraries/Helpers/: CMakeLists.txt
Libraries/Helpers/Includes/Helpers/: ostream_joiner.hpp  semiregular_box.hpp
Program/: CMakeLists.txt  Main.cpp  Main.hpp
Technical Documentation/: README.md
